# multi-source-agentic-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: deploy-aws.yml
corpus/: README.md  golden_dataset.json
corpus/data/sql/: init_schema.sql
corpus/data/sql/seed/: 05_readonly_role.sql  seed_enforcement_actions.sql  seed_regulated_entities.sql  seed_regulatory_instruments.sql
corpus/ingestion_output/: metadata_manifest.json
corpus/manifests/: corpus_manifest.json
corpus/scripts/: download_corpus.py  ingestion_adapter.py  parse_structured_data.py
infra/: cloudfront.tf  ecr.tf  ecs.tf  main.tf  outputs.tf  rds.tf  secrets.tf  terraform.tfvars  variables.tf  vpc.tf
iras_corpus/: README.md
iras_corpus/data/sql/: init_schema.sql
iras_corpus/data/sql/seed/: seed_double_tax_agreements.sql  seed_tax_instruments.sql  seed_tax_rates.sql
iras_corpus/ingestion_output/: metadata_manifest.json
iras_corpus/manifests/: iras_corpus_manifest.json
iras_corpus/scripts/: download_corpus.py  ingestion_adapter.py  seed_iras_data.py
scripts/: deploy-infra.sh  evaluate_judges.py  run_evaluation.py  seed-opensearch.sh  seed-rds.sh
src/msrag/: __init__.py  cache.py  graph.py  logging_config.py  server.py  state.py
src/msrag/api/: schemas.py
src/msrag/nodes/: __init__.py  agent_retrieve.py  generate.py  quality_gate.py
src/msrag/tools/: __init__.py  builder.py  sql_query.py  vector_search.py  web_search.py
