[project]
name = "multi-source-agentic-rag"
version = "0.1.0"
description = "Multi-source agentic RAG pipeline for MAS regulatory compliance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0",
    "langgraph>=0.4",
    "langchain-openai>=0.3",
    "langchain-core>=0.3",
    "opensearch-py>=2.8",
    "psycopg2-binary>=2.9",
    "tiktoken>=0.9",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "langchain-text-splitters>=1.1.1",
    "openai>=2.30.0",
    "pandas>=3.0.2",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "tavily-python>=0.7.23",
    "tqdm>=4.67.3",
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/msrag"]
